--- a/soil-tclp.html
+++ b/soil-tclp.html
@@ -7,47 +7,65 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="form-container">
-        <h1>Soil / TCLP — Enter Values</h1>
 
-        <label for="sample">Sample:</label>
-        <input type="number" id="sample" step="any" />
+    <div class="matrix-container">
+        <h1>Soil / TCLP</h1>
 
-        <label for="duplicate">Duplicate Sample:</label>
-        <input type="number" id="duplicate" step="any" />
+        <div class="matrix-content">
 
-        <label for="ms">MS:</label>
-        <input type="number" id="ms" step="any" />
+            <!-- LEFT SIDE: INPUTS -->
+            <div class="inputs-column">
+                <div class="input-group">
+                    <label for="sample">Sample:</label>
+                    <input type="number" id="sample">
+                </div>
 
-        <button id="calcBtn" onclick="calculateSoilTCLP()">Calculate</button>
+                <div class="input-group">
+                    <label for="duplicate">Duplicate Sample:</label>
+                    <input type="number" id="duplicate">
+                </div>
 
-        <h2>Results</h2>
-        <p>Relative Percent Difference (RPD): <span id="rpdResult">—</span></p>
-        <p>Spike Recovery (SR): <span id="srResult">—</span></p>
+                <div class="input-group">
+                    <label for="ms">MS:</label>
+                    <input type="number" id="ms">
+                </div>
 
-        <button onclick="location.href='index.html'">Back to Menu</button>
+                <button onclick="calculateSoil()">Calculate</button>
+            </div>
+
+            <!-- RIGHT SIDE: RESULTS -->
+            <div class="results-column">
+                <h2>Results</h2>
+                <p>Relative Percent Difference (RPD): <span id="rpdResult">—</span></p>
+                <p>Spike Recovery (SR): <span id="srResult">—</span></p>
+            </div>
+
+        </div>
     </div>
 
     <script>
-        function calculateSoilTCLP() {
-            const sample = parseFloat(document.getElementById('sample').value);
-            const duplicate = parseFloat(document.getElementById('duplicate').value);
-            const ms = parseFloat(document.getElementById('ms').value);
+        function calculateSoil() {
+            const sample = parseFloat(document.getElementById("sample").value);
+            const duplicate = parseFloat(document.getElementById("duplicate").value);
+            const ms = parseFloat(document.getElementById("ms").value);
 
             if (isNaN(sample) || isNaN(duplicate) || isNaN(ms)) {
-                alert('Please enter valid numbers for Sample, Duplicate Sample, and MS.');
+                alert("Please enter valid numbers in all fields.");
                 return;
             }
 
-            // RPD = ((Sample - Duplicate Sample) * 100 / (Sample + Duplicate Sample)) / 2
-            const rpd = ((sample - duplicate) * 100 / (sample + duplicate)) / 2;
+            // Correct RPD formula:
+            // RPD = (Sample - Duplicate) * 100 / ((Sample + Duplicate) / 2)
+            const rpd = ((sample - duplicate) * 100) / ((sample + duplicate) / 2);
 
+            // Correct SR formula:
             // SR = (MS - Sample) * 100 / 4
             const sr = ((ms - sample) * 100) / 4;
 
-            document.getElementById('rpdResult').textContent = rpd.toFixed(2) + '%';
-            document.getElementById('srResult').textContent = sr.toFixed(2) + '%';
+            document.getElementById("rpdResult").textContent = rpd.toFixed(2) + "%";
+            document.getElementById("srResult").textContent = sr.toFixed(2) + "%";
         }
     </script>
+
 </body>
 </html>
