--- a/paint.html
+++ b/paint.html
@@ -17,17 +17,17 @@
             <div class="inputs-column">
                 <div class="input-group">
                     <label for="lcs">LCS:</label>
-                    <input type="number" id="lcs">
+                    <input type="number" id="lcs" step="any">
                 </div>
 
                 <div class="input-group">
                     <label for="lcsd">LCSD:</label>
-                    <input type="number" id="lcsd">
+                    <input type="number" id="lcsd" step="any">
                 </div>
 
                 <div class="input-group">
                     <label for="ms">MS:</label>
-                    <input type="number" id="ms">
+                    <input type="number" id="ms" step="any">
                 </div>
 
                 <button onclick="calculatePaint()">Calculate</button>
@@ -54,15 +54,17 @@
                 return;
             }
 
-            // Correct RPD formula:
-            // RPD = (LCS - LCSD) * 100 / ((LCS + LCSD) / 2)
-            const rpd = ((lcs - lcsd) * 100) / ((lcs + lcsd) / 2);
+            const denom = (lcs + lcsd) / 2;
+            if (denom === 0) {
+                document.getElementById("rpdResult").textContent = "—";
+            } else {
+                // RPD = |LCS - LCSD| * 100 / ((LCS + LCSD) / 2)
+                const rpd = (Math.abs(lcs - lcsd) * 100) / denom;
+                document.getElementById("rpdResult").textContent = rpd.toFixed(2) + "%";
+            }
 
-            // Correct SR formula:
-            // SR = (MS - LCS) * 100 / 4
-            const sr = ((ms - lcs) * 100) / 4;
-
-            document.getElementById("rpdResult").textContent = rpd.toFixed(2) + "%";
+            // SR for paint = MS * 100 / 4
+            const sr = (ms * 100) / 4;
             document.getElementById("srResult").textContent = sr.toFixed(2) + "%";
         }
     </script>
