--- a/paint.html
+++ b/paint.html
@@ -7,39 +7,27 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-    <div class="matrix-container">
+    <div class="page">
         <h1>Paint</h1>
+        <div class="content">
+            <div class="results">
+                <h2>Results</h2>
+                <p>RPD: <span id="rpdResult">—</span></p>
+                <p>Spike Recovery: <span id="srResult">—</span></p>
+            </div>
 
-        <div class="matrix-content">
+            <div class="inputs">
+                <label for="lcs">LCS:</label>
+                <input type="number" id="lcs" />
 
-            <!-- LEFT SIDE: INPUTS -->
-            <div class="inputs-column">
-                <div class="input-group">
-                    <label for="lcs">LCS:</label>
-                    <input type="number" id="lcs" step="any">
-                </div>
+                <label for="lcsd">LCSD:</label>
+                <input type="number" id="lcsd" />
 
-                <div class="input-group">
-                    <label for="lcsd">LCSD:</label>
-                    <input type="number" id="lcsd" step="any">
-                </div>
-
-                <div class="input-group">
-                    <label for="ms">MS:</label>
-                    <input type="number" id="ms" step="any">
-                </div>
+                <label for="ms">MS:</label>
+                <input type="number" id="ms" />
 
                 <button onclick="calculatePaint()">Calculate</button>
             </div>
-
-            <!-- RIGHT SIDE: RESULTS -->
-            <div class="results-column">
-                <h2>Results</h2>
-                <p>Relative Percent Difference (RPD): <span id="rpdResult">—</span></p>
-                <p>Spike Recovery (SR): <span id="srResult">—</span></p>
-            </div>
-
         </div>
     </div>
 
@@ -49,25 +37,20 @@
             const lcsd = parseFloat(document.getElementById("lcsd").value);
             const ms = parseFloat(document.getElementById("ms").value);
 
-            if (isNaN(lcs) || isNaN(lcsd) || isNaN(ms)) {
-                alert("Please enter valid numbers in all fields.");
+            if (isNaN(lcs) || isNaN(lcsd)) {
+                alert("Enter values for LCS and LCSD.");
                 return;
             }
 
-            const denom = (lcs + lcsd) / 2;
-            if (denom === 0) {
-                document.getElementById("rpdResult").textContent = "—";
-            } else {
-                // RPD = |LCS - LCSD| * 100 / ((LCS + LCSD) / 2)
-                const rpd = (Math.abs(lcs - lcsd) * 100) / denom;
-                document.getElementById("rpdResult").textContent = rpd.toFixed(2) + "%";
-            }
+            // RPD = |LCS - LCSD| / ((LCS + LCSD) / 2) * 100
+            const rpd = Math.abs(lcs - lcsd) / ((lcs + lcsd) / 2) * 100;
 
-            // SR for paint = MS * 100 / 4
+            // SR = MS * 100 / 4
             const sr = (ms * 100) / 4;
+
+            document.getElementById("rpdResult").textContent = rpd.toFixed(2) + "%";
             document.getElementById("srResult").textContent = sr.toFixed(2) + "%";
         }
     </script>
-
 </body>
 </html>
