--- a/paint.html
+++ b/paint.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paint Calculations</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Paint</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="page">
-        <h1>Paint</h1>
-        <div class="content">
-            <div class="results">
-                <h2>Results</h2>
-                <p>RPD: <span id="rpdResult">—</span></p>
-                <p>Spike Recovery: <span id="srResult">—</span></p>
-            </div>
+  <div class="matrix-container">
+    <h1>Paint</h1>
 
-            <div class="inputs">
-                <label for="lcs">LCS:</label>
-                <input type="number" id="lcs" />
-
-                <label for="lcsd">LCSD:</label>
-                <input type="number" id="lcsd" />
-
-                <label for="ms">MS:</label>
-                <input type="number" id="ms" />
-
-                <button onclick="calculatePaint()">Calculate</button>
-            </div>
+    <div class="matrix-content">
+      <!-- Inputs column -->
+      <div class="inputs-column">
+        <div class="input-group">
+          <label for="lcs">LCS:</label>
+          <input type="number" id="lcs" step="any" />
         </div>
+
+        <div class="input-group">
+          <label for="lcsd">LCSD:</label>
+          <input type="number" id="lcsd" step="any" />
+        </div>
+
+        <div class="input-group">
+          <label for="ms">MS:</label>
+          <input type="number" id="ms" step="any" />
+        </div>
+
+        <div style="display:flex;gap:10px;">
+          <button onclick="calculatePaint()">Calculate</button>
+          <button onclick="clearPaint()" type="button">Clear</button>
+        </div>
+
+        <p id="errorPaint" style="color:#b00020; display:none; margin-top:8px;"></p>
+      </div>
+
+      <!-- Results column (boxed, matches soil layout) -->
+      <div class="results-column">
+        <h2>Results</h2>
+        <p>Relative Percent Difference (RPD): <strong><span id="rpdResult">—</span></strong></p>
+        <p>Spike Recovery (SR): <strong><span id="srResult">—</span></strong></p>
+        <p style="font-size:0.9rem; color:#555; margin-top:12px;">
+          <em>RPD shows signed value; magnitude (absolute) shown in parentheses.</em>
+        </p>
+      </div>
     </div>
+  </div>
 
-    <script>
-        function calculatePaint() {
-            const lcs = parseFloat(document.getElementById("lcs").value);
-            const lcsd = parseFloat(document.getElementById("lcsd").value);
-            const ms = parseFloat(document.getElementById("ms").value);
+  <script>
+    function showError(id, msg) {
+      const el = document.getElementById(id);
+      if (!msg) { el.style.display = 'none'; el.textContent = ''; }
+      else { el.style.display = 'block'; el.textContent = msg; }
+    }
 
-            if (isNaN(lcs) || isNaN(lcsd)) {
-                alert("Enter values for LCS and LCSD.");
-                return;
-            }
+    function calculatePaint() {
+      showError('errorPaint', '');
+      const lcs = parseFloat(document.getElementById('lcs').value);
+      const lcsd = parseFloat(document.getElementById('lcsd').value);
+      const ms = parseFloat(document.getElementById('ms').value);
 
-            // RPD = |LCS - LCSD| / ((LCS + LCSD) / 2) * 100
-            const rpd = Math.abs(lcs - lcsd) / ((lcs + lcsd) / 2) * 100;
-
-            // SR = MS * 100 / 4
-            const sr = (ms * 100) / 4;
-
-            document.getElementById("rpdResult").textContent = rpd.toFixed(2) + "%";
-            document.getElementById("srResult").textContent = sr.toFixed(2) + "%";
-        }
-    </script>
-</body>
-</html>
+      if (Number.isN
