--- a/paint.html
+++ b/paint.html
@@ -1,64 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Paint</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Paint Calculations</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="matrix-container">
-    <h1>Paint</h1>
 
-    <div class="matrix-content">
-      <!-- Inputs column -->
-      <div class="inputs-column">
-        <div class="input-group">
-          <label for="lcs">LCS:</label>
-          <input type="number" id="lcs" step="any" />
+    <div class="page-container">
+
+        <h1 class="page-title">Paint</h1>
+
+        <div class="calc-grid">
+
+            <!-- LEFT SIDE — INPUTS -->
+            <div class="input-section">
+                <label for="lcs">LCS:</label>
+                <input type="number" id="lcs">
+
+                <label for="lcsd">LCSD:</label>
+                <input type="number" id="lcsd">
+
+                <label for="ms">MS:</label>
+                <input type="number" id="ms">
+
+                <button onclick="calculatePaint()">Calculate</button>
+            </div>
+
+            <!-- RIGHT SIDE — RESULTS BOX -->
+            <div class="results-box">
+                <h2>Results</h2>
+
+                <div class="result-row">
+                    <span>RPD:</span>
+                    <span id="rpdResult">—</span>
+                </div>
+
+                <div class="result-row">
+                    <span>Spike Recovery:</span>
+                    <span id="srResult">—</span>
+                </div>
+            </div>
+
         </div>
 
-        <div class="input-group">
-          <label for="lcsd">LCSD:</label>
-          <input type="number" id="lcsd" step="any" />
-        </div>
-
-        <div class="input-group">
-          <label for="ms">MS:</label>
-          <input type="number" id="ms" step="any" />
-        </div>
-
-        <div style="display:flex;gap:10px;">
-          <button onclick="calculatePaint()">Calculate</button>
-          <button onclick="clearPaint()" type="button">Clear</button>
-        </div>
-
-        <p id="errorPaint" style="color:#b00020; display:none; margin-top:8px;"></p>
-      </div>
-
-      <!-- Results column (boxed, matches soil layout) -->
-      <div class="results-column">
-        <h2>Results</h2>
-        <p>Relative Percent Difference (RPD): <strong><span id="rpdResult">—</span></strong></p>
-        <p>Spike Recovery (SR): <strong><span id="srResult">—</span></strong></p>
-        <p style="font-size:0.9rem; color:#555; margin-top:12px;">
-          <em>RPD shows signed value; magnitude (absolute) shown in parentheses.</em>
-        </p>
-      </div>
     </div>
-  </div>
 
-  <script>
-    function showError(id, msg) {
-      const el = document.getElementById(id);
-      if (!msg) { el.style.display = 'none'; el.textContent = ''; }
-      else { el.style.display = 'block'; el.textContent = msg; }
-    }
+    <script>
+        function calculatePaint() {
+            const lcs = parseFloat(document.getElementById('lcs').value);
+            const lcsd = parseFloat(document.getElementById('lcsd').value);
+            const ms = parseFloat(document.getElementById('ms').value);
 
-    function calculatePaint() {
-      showError('errorPaint', '');
-      const lcs = parseFloat(document.getElementById('lcs').value);
-      const lcsd = parseFloat(document.getElementById('lcsd').value);
-      const ms = parseFloat(document.getElementById('ms').value);
+            if (isNaN(lcs) || isNaN(lcsd) || isNaN(ms)) {
+                alert("Please enter all numbers.");
+                return;
+            }
 
-      if (Number.isN
+            // PAINT RPD: |LCS − LCSD| / ((LCS + LCSD)/2) × 100
+            const rpd = (Math.abs(lcs - lcsd) / ((lcs + lcsd) / 2)) * 100;
+
+            // PAINT Spike Recovery: MS × 100 / 4
+            const sr = (ms * 100) / 4;
+
+            document.getElementById('rpdResult').textContent = rpd.toFixed(2) + "%";
+            document.getElementById('srResult').textContent = sr.toFixed(2) + "%";
+        }
+    </script>
+
+</body>
+</html>
