--- a/paint.html
+++ b/paint.html
@@ -1,52 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paint Calculations</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-
-    <div class="matrix-container">
-        <h1>Paint</h1>
-
-        <div class="matrix-content">
-            <!-- LEFT COLUMN: Inputs -->
-            <div class="inputs-column">
-                <div class="input-group">
-                    <label for="lcs">LCS:</label>
-                    <input type="number" id="lcs" step="any" />
-                </div>
-
-                <div class="input-group">
-                    <label for="lcsd">LCSD:</label>
-                    <input type="number" id="lcsd" step="any" />
-                </div>
-
-                <div class="input-group">
-                    <label for="ms">MS:</label>
-                    <input type="number" id="ms" step="any" />
-                </div>
-
-                <div style="display:flex; gap:10px; margin-top:10px;">
-                    <button onclick="calculatePaint()">Calculate</button>
-                    <button onclick="clearPaint()" type="button">Clear</button>
-                </div>
-            </div>
-
-            <!-- RIGHT COLUMN: Results -->
-      <div class="results-column">
-        <h2>Results</h2>
-        <p>Relative Percent Difference (RPD): <strong><span id="rpdResult">—</span></strong></p>
-        <p>Spike Recovery (SR): <strong><span id="srResult">—</span></strong></p>
-        <p style="font-size:0.9rem; color:#555; margin-top:12px;"><em>RPD shows signed value; magnitude (absolute) shown in parentheses.</em></p>
-      </div>
+<div class="matrix-content">
+  <!-- Inputs -->
+  <div class="inputs-column">
+    <div class="input-group">
+      <label for="lcs">LCS:</label>
+      <input type="number" id="lcs" />
     </div>
+    <div class="input-group">
+      <label for="lcsd">LCSD:</label>
+      <input type="number" id="lcsd" />
+    </div>
+    <div class="input-group">
+      <label for="ms">MS:</label>
+      <input type="number" id="ms" />
+    </div>
+    <button onclick="calculatePaint()">Calculate</button>
   </div>
 
-
-    <script>
-        function calculatePaint() {
-
-
+  <!-- Results -->
+  <div class="results-column">
+    <h2>Results</h2>
+    <p>Relative Percent Difference (RPD): <strong><span id="rpdResult">—</span></strong></p>
+    <p>Spike Recovery (SR): <strong><span id="srResult">—</span></strong></p>
+    <p style="font-size:0.9rem; color:#555; margin-top:12px;">
+      <em>RPD shows signed value; magnitude (absolute) shown in parentheses.</em>
+    </p>
+  </div>
+</div>
