--- a/paint.html
+++ b/paint.html
@@ -1,28 +1,51 @@
-<div class="matrix-content">
-  <!-- Inputs -->
-  <div class="inputs-column">
-    <div class="input-group">
-      <label for="lcs">LCS:</label>
-      <input type="number" id="lcs" />
-    </div>
-    <div class="input-group">
-      <label for="lcsd">LCSD:</label>
-      <input type="number" id="lcsd" />
-    </div>
-    <div class="input-group">
-      <label for="ms">MS:</label>
-      <input type="number" id="ms" />
-    </div>
-    <button onclick="calculatePaint()">Calculate</button>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Paint Calculations</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <div class="form-container">
+        <h1>Paint — Enter Values</h1>
 
-  <!-- Results -->
-  <div class="results-column">
-    <h2>Results</h2>
-    <p>Relative Percent Difference (RPD): <strong><span id="rpdResult">—</span></strong></p>
-    <p>Spike Recovery (SR): <strong><span id="srResult">—</span></strong></p>
-    <p style="font-size:0.9rem; color:#555; margin-top:12px;">
-      <em>RPD shows signed value; magnitude (absolute) shown in parentheses.</em>
-    </p>
-  </div>
-</div>
+        <label for="lcs">LCS:</label>
+        <input type="number" id="lcs" />
+
+        <label for="lcsd">LCSD:</label>
+        <input type="number" id="lcsd" />
+
+        <label for="ms">MS:</label>
+        <input type="number" id="ms" />
+
+        <button id="calcBtn" onclick="calculatePaint()">Calculate</button>
+
+        <h2>Results</h2>
+        <p>Relative Percent Difference (RPD): <span id="rpdResult">—</span></p>
+        <p>Spike Recovery (SR): <span id="srResult">—</span></p>
+    </div>
+
+    <script>
+        function calculatePaint() {
+            const lcs = parseFloat(document.getElementById('lcs').value);
+            const lcsd = parseFloat(document.getElementById('lcsd').value);
+            const ms = parseFloat(document.getElementById('ms').value);
+
+            if (isNaN(lcs) || isNaN(lcsd) || isNaN(ms)) {
+                alert('Please enter valid numbers for LCS, LCSD, and MS.');
+                return;
+            }
+
+            // Correct Paint RPD: |LCS − LCSD| / ((LCS + LCSD)/2) * 100
+            const rpd = (Math.abs(lcs - lcsd) / ((lcs + lcsd) / 2)) * 100;
+
+            // Correct Paint SR: MS * 100 / 4
+            const sr = (ms * 100) / 4;
+
+            document.getElementById('rpdResult').textContent = rpd.toFixed(2) + '%';
+            document.getElementById('srResult').textContent = sr.toFixed(2) + '%';
+        }
+    </script>
+</body>
+</html>
